# yt-answer-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  sandbox.ipynb
data/: videos.db
data_ingestion/: database.py  ingest.py  sync_chroma.py  update.py
evals/: analysis.py  evaluate.py  metrics.py  tags.json  viewer.py
evals/response/: generate.py  tests.py  viewer.py
evals/response/data/: response_results.jsonl
evals/retrieval/: evaluate.py  tests.py
evals/retrieval/data/: eval_results.jsonl
evals/retrieval/query_gen/: run.py
evals/retrieval/query_gen/data/: queries.csv  raw_queries.jsonl
experiments/: registry.jsonl  registry.md  registry.yaml
experiments/exp_001/: EXPERIMENT.md  experiment.yaml
experiments/exp_001/runs/r001/: extra.jsonl  (+4 more)
experiments/exp_001/src/: generate.py  main.py
experiments/exp_002/: experiment.yaml
experiments/exp_002/src/: generate.py
ingestion/: database.py  ingest.py  sync_chroma.py
prompts/: answer_system.md  answer_user.md
query_gen/: functions.py  run.py
query_gen/data/: raw_queries.jsonl
response_eval/: generate.py  viewer.py
response_eval/data/: response_results.jsonl
retrieval_eval/: analysis.py  evaluate.py
retrieval_eval/data/: eval_results.jsonl
retrieval_eval/query_gen/: functions.py  run.py  viewer.py
retrieval_eval/query_gen/data/: raw_queries.jsonl  raw_queries.jsonl.bak
ui/: chat.py
utils/: answer.py  context.py  data.py  experiments.py  git.py  models.py  search_bm25.py  search_chroma.py  search_hybrid.py
utils/query_gen/: prompt.md  run.py  viewer.py
(+11 files in other folders)
